overflow-x fix

--- a/src/app/mainBody/mainBody.component.css
+++ b/src/app/mainBody/mainBody.component.css
@@ -1,3 +1,4 @@
 .content-height{
     min-height: 85vh;
+    overflow-x: hidden;
 }
